1.3.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11687: Mssql DSN with port does not work.
- Fixed issue #11700: Subselects only work when there is a database instance
  set.


1.3 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates.


1.3rc1 - Monday 25 June 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10884: Database: Limit in Oracle only works with 1000 elements
  at maximum.
- Fixed issue #10937: ezcDbHandler::hasFeature() is not implemented properly
  anywhere.
- Fixed issue #10943: Add parameter to specify type of value in bindValue() 
  and bindParam().
- Fixed issue #10986: in() expression test for sub selects fails in PHP 5.1.6.
- Documentation fixes and updates.


1.3beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10802: MSSql handler misses identifierQuoteChars.
- Fixed issue #10803: Format of ezcQueryExpressionMssql::now().
- Fixed issue #10797: Do not quote numbers and subqueries in IN()


1.3beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #8240: ezcQueryExpression::in does not work with strings.
- Fixed issue #8520: The non trivial join methods have incomplete
  documentation.
- Fixed issue #9526: Implemented expression now() for each database handler.
- Fixed issue #10529: Tests for quoting of strings in query expressions.
- Implemented feature #7772: SQL Server implementation for the Database package.
  Based on contributions by Joel Arvidsson and Friedel Hill.
- Implemented feature #8473: Oracle Limit/Offset optimization.
- Implemented feature #8448: Select Distinct not supported
- Implemented feature #9960 [Database] sql abstraction.  Based on contributions by
  Joel Arvidsson and Friedel Hill.